# pdf-splitter-app

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: build.yaml
assets/: employees.json
src/: app.py
tests/: test_app.py
