[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pdf-splitter-app"
version = "0.1.0"
description = "A simple Python application to split PDF files per employee."
authors = [{ name = "Tiago Marques" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pypdf>=3.0.0",
    "ruff>=0.13.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E501", "F", "I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[project.scripts]
pdf-splitter-app = "app:cli"
